# pysmartdl2

./: README.md  pyproject.toml  setup.py
.github/workflows/: multiPythonTest.yml  publish.yaml  test_Linux.yaml  test_MacIntel.yaml  test_MacM1.yaml  test_Windows.yaml
pysmartdl/: __init__.py  pysmartdl.py
test/: __init__.py  test_pySmartDL.py  test_pysmartdl.py  test_pysmartdl2.py
